cambios informacion y formulario

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     <!-- Home Section -->
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hola, soy yo</h3>
+            <h3>Hola, yo soy</h3>
             <h1>Andres Gutierrez</h1>
             <h3>Y soy <span class="multiple-text"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos. Lorem ipsum dolor sit amet,
-                consectetur adipisicing elit. Deserunt illum quod unde, sit dolorum labore incidunt harum doloremque
-                suscipit voluptatibus quam excepturi praesentium obcaecati, ratione fugit accusantium architecto animi
-                veritatis?
+            <p>
+                Soy un estudiante de 19 años apasionado por el desarrollo de software, con experiencia en programación,
+                análisis de datos y desarrollo web. Destaco en lenguajes como Python, C# y JavaScript, y tengo
+                habilidades en herramientas como Pandas y Plotly. Siempre busco aprender y contribuir a proyectos
+                innovadores.
             </p>
 
             <a href="#" class="btn">Dowload CV</a>
@@ -62,14 +63,28 @@
 
         <div class="about-content">
             <h3>Software Developer!</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos. Lorem ipsum dolor sit amet,
-                consectetur adipisicing elit. Deserunt illum quod unde, sit dolorum labore incidunt harum doloremque
-                suscipit voluptatibus quam excepturi praesentium obcaecati, ratione fugit accusantium architecto animi
-                veritatis?
+            <p class="texto-inicial">
+                Soy un estudiante con una pasión por la tecnología y el desarrollo de software, he estado cultivando mis
+                habilidades desde 2021 en diversas áreas como programación, análisis de datos y desarrollo web...
+            </p>
+
+            <p class="texto-expandido">
+                Mi experiencia abarca lenguajes C++, C#, JavaScript, PHP, Python, R y SQL, y manejo tecnologías como
+                Pandas, BeautifulSoup,
+                Plotly, HTML, CSS y Bootstrap. Disfruto colaborar en equipo para crear soluciones innovadoras que
+                prioricen la usabilidad
+                y la experiencia del usuario. Mi enfoque en el aprendizaje continuo me impulsa a enfrentar nuevos
+                desafíos y aportar ideas
+                frescas a proyectos en el dinámico mundo del desarrollo.
+
+                Además, me mantengo actualizado con las últimas tendencias tecnológicas y participo activamente en
+                proyectos open source.
+                Mi objetivo es seguir creciendo como desarrollador y contribuir a proyectos que generen un impacto
+                positivo en la sociedad.
             </p>
 
             <div class="btn-box btns">
-                <a href="#" class="btn">Leer mas</a>
+                <a href="#" class="btn toggle-texto">Leer más</a>
             </div>
         </div>
     </section>
@@ -86,8 +101,13 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>Master Degree - Uni</h3>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2022 - 2022</div>
+                            <h3>
+                                <a href="https://www.linkedin.com/in/andresf-gutierrez/details/education/1635551897534/single-media-viewer/?type=DOCUMENT&profileId=ACoAAEkKQf0Bc3ziAjo2H8si-kVX3Ho8fjxNXqE"
+                                    target="_blank" rel="noopener noreferrer">
+                                    Tecnico en Programación de Software - SENA
+                                </a>
+                            </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptas, voluptatem
                                 ducimus eos praesentium reiciendis, rerum ad consequuntur molestias inventore magnam,
                                 deleniti sed quo temporibus nobis tempora accusamus in ex.</p>
@@ -96,8 +116,13 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>Master Degree - Uni</h3>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2023 - 2023</div>
+                            <h3>
+                                <a href="https://www.linkedin.com/in/andresf-gutierrez/details/education/1702673675927/single-media-viewer/?type=DOCUMENT&profileId=ACoAAEkKQf0Bc3ziAjo2H8si-kVX3Ho8fjxNXqE"
+                                    target="_blank" rel="noopener noreferrer">
+                                    International certificate HTML5 y CSS - Certiport
+                                </a>
+                            </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptas, voluptatem
                                 ducimus eos praesentium reiciendis, rerum ad consequuntur molestias inventore magnam,
                                 deleniti sed quo temporibus nobis tempora accusamus in ex.</p>
@@ -106,8 +131,14 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Master Degree - Uni</h3>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2024 - 2024</div>
+
+                            <h3>
+                                <a href="https://www.linkedin.com/in/andresf-gutierrez/details/education/1720040275964/single-media-viewer/?type=DOCUMENT&profileId=ACoAAEkKQf0Bc3ziAjo2H8si-kVX3Ho8fjxNXqE"
+                                    target="_blank" rel="noopener noreferrer">
+                                    International certificate HTML5 y CSS - Certiport
+                                </a>
+                            </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptas, voluptatem
                                 ducimus eos praesentium reiciendis, rerum ad consequuntur molestias inventore magnam,
                                 deleniti sed quo temporibus nobis tempora accusamus in ex.</p>
@@ -127,8 +158,13 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i> 2017 - 2018</div>
-                            <h3>Master Degree - Uni</h3>
+                            <div class="year"><i class='bx bxs-calendar'></i> 2024 - 2024</div>
+                            <h3>
+                                <a href="https://github.com/AndresFGutierrez/weather-application" target="_blank"
+                                    rel="noopener noreferrer">
+                                    Weather App for Mobile Devices
+                                </a>
+                            </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptas, voluptatem
                                 ducimus eos praesentium reiciendis, rerum ad consequuntur molestias inventore magnam,
                                 deleniti sed quo temporibus nobis tempora accusamus in ex.</p>
@@ -138,17 +174,27 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                            <h3>Master Degree - Uni</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptas, voluptatem
-                                ducimus eos praesentium reiciendis, rerum ad consequuntur molestias inventore magnam,
-                                deleniti sed quo temporibus nobis tempora accusamus in ex.</p>
+                            <h3>
+                                <a href="https://github.com/AndresFGutierrez/Text-analysis-with-AI-to-analyze-feelings"
+                                    target="_blank" rel="noopener noreferrer">
+                                    Text analysis with-AI to analyze feelings
+                                </a>
+                            </h3>
+                            <p>Aplicación de inteligencia artificial que utiliza procesamiento de lenguaje natural (NLP)
+                                para detectar las emociones presentes en textos ingresados por el usuario. La
+                                herramienta analiza expresiones escritas y proporciona un desglose emocional.</p>
                         </div>
                     </div>
 
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                            <h3>Master Degree - Uni</h3>
+                            <h3>
+                                <a href="https://github.com/AndresFGutierrez/" target="_blank"
+                                    rel="noopener noreferrer">
+                                    "MediCitas" desktop application CRUD management
+                                </a>
+                            </h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique voluptas, voluptatem
                                 ducimus eos praesentium reiciendis, rerum ad consequuntur molestias inventore magnam,
                                 deleniti sed quo temporibus nobis tempora accusamus in ex.</p>
@@ -175,22 +221,33 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>HTML <span>90%</span></h3>
+                            <h3>Programación General y Backend <span>77%</span></h3>
+                            <h4>Python, C# y .NET Framework, APIs, Git y control de versiones</h4>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>CSS <span>90%</span></h3>
+                            <h3>Manipulación y Análisis de Datos <span>80%</span></h3>
+                            <h4>Pandas, BeautifulSoup4, Plotly, Data Analysis, Modelado de datos relacionales,
+                                Integración con APIs</h4>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>JavaScript <span>90%</span></h3>
+                            <h3>Desarrollo Web <span>70%</span></h3>
+                            <h4>HTML-CSS. JavaScript, Bootstrap, SEO Optimization</h4>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Python <span>90%</span></h3>
+                            <h3>Ciencia de Datos y Estadística <span>80%</span></h3>
+                            <h4>R, RMarkdown, Quarto, Metabase, Excel, Python</h4>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>SQL y ETL <span>85%</span></h3>
+                            <h4>PostgreSQL, MySQL, SQLite, SQL Server, ETL processes</h4>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -203,22 +260,34 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>Web Design <span>90%</span></h3>
+                            <h3>Problem Solving & Analytical Thinking <span>85%</span></h3>
+                            <h4>Capacidad para resolver problemas mediante análisis y pensamiento analítico.</h4>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Web Development <span>90%</span></h3>
+                            <h3>Data Storytelling & Reporting <span>80%</span></h3>
+                            <h4>Habilidad para comunicar hallazgos a través de visualizaciones efectivas y reportes
+                                claros, transformando datos en decisiones.</h4>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>SEO Marketing <span>90%</span></h3>
+                            <h3>ETL & Data Management <span>85%</span></h3>
+                            <h4>Experiencia en ETL, asegurando la integridad y disponibilidad de la información.</h4>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Graphic Design <span>90%</span></h3>
+                            <h3>Web Development & Optimization <span>75%</span></h3>
+                            <h4>Website Development centrado en la usabilidad y optimización SEO.</h4>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Version Control & Collaboration <span>80%</span></h3>
+                            <h4>Trabajo en equipo con control de versiones para la colaboración y gestión de proyectos.
+                            </h4>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -231,7 +300,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contactame <span>Ahora</span></h2>
 
-        <form action="#" autocomplete="off" method="POST">
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" id="nombreCompleto" name="nombreCompleto" required>
